# code-to-yaml-vector-search

./: .assistantexcludesearch  .assistantignore  .gitignore  Cargo.toml  LICENSE  README.md  UsageSuggestions.md  futureUpdates.md  futureUpdates.txt
analyze-query/: elements.js
archive/: yaml_service.rs
context/: dev_phases.md  dir_structure.md  metadata.md  phase_iter.md  project_definition.md  prompt_chain.md  structure.md  svelte_meets_rust.md  user.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  main.ts
src/: main.rs  models.rs  routes.rs  shared.rs  utils.rs
src/models/: chat_management.rs  query_management.rs  utils.rs
src/plugins/: default_chat.rs  scaffolding.rs
src/prompts/: model.txt  user.txt
src/routes/: analyze.rs  analyze_query.rs  create_project.rs  delete_project.rs  execute_query.rs  get_project.rs  home.rs  mod.rs  regenerate_yaml.rs  suggest_split.rs  update_env.rs  update_project.rs
src/services/: agent_service.rs  clustering_service.rs  embedding_service.rs  file_service.rs  git_service.rs  llm_service.rs  mod.rs  path_utils.rs  project_service.rs  qdrant_service.rs  search_service.rs  template_service.rs  yaml_service.rs
static/: analysis.css  analyze-query.css  analyze-query.js  frontend.css  frontend.js  global.css  home.css  home.js  index.html  modal.css  project.css  project.js  split-chat.css  split-chat.js  split-file.js  split-modal.css  yaml-checkbox-logic.js
static/analyze-query/: apply-to-file-action.js  chat.js  context.js  elements.js  git-branch-actions.js  (+3 more)
(+120 files in other folders)
