[package]
name = "project_to_yaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.10.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
async-trait = "0.1.68"
actix-cors = "0.6.4"
actix-files = "0.6.5"
llm_api_access = "0.1.27" # my api crate
qdrant-client = "1.13.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
# llm_api_access = { path = "../llm_api_crate" }
html-escape = "0.2.13"
regex = "1.11.1"
rand = "0.9.1"
# env_logger = "0.10.0" # debugging